# Chat2LLMs

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  QA示意图.excalidraw  README.md  config.ini  pyproject.toml  start.sh
docker/: .env  docker-compose.yaml
qdrant_storage/: meta.json  raft_state.json
scripts/: start.bat  start.ipynb  start.sh
sqlite/: chat2llms.db
src/: ChatBot.py  __init__.py  app.py  fastapi_app.py  main.py  navigation.py  routes.py  streamlit_main.py
src/.streamlit/: config.toml
src/api/: chat_api_model.py  knowledge_model.py  main.py  routes.py
src/assistant/: __init__.py  chat.py  chat_routes.py  message_routes.py  routes.py
src/chat/: __init__.py  chat.py  routes.py
src/config/: __init__.py  config.py  env_config.py
src/core/: __init__.py  chat.py  chatbot.py  component.py  config.py  embedding.py  llms_manager.py  pipeline.py  streamlit_config.py  streamlit_utils.py  utils.py
src/embedding/: __init__.py  embedding.py
src/knowledge/: routes.py
src/llms/: ollama.py
src/manage/: __init__.py  manage.py  routes.py
src/message/: routes.py
src/models/: __init__.py  assistant.py  base.py  chat.py  issue.py  knowledge.py  message.py  suggestion.py  tool.py
src/pages/: 1_知识库管理.py  2_使用分析.py  3_工具管理.py  3_工具管理_bak.py  3_问题与建议.py  4_使用分析.py  4_使用帮助.py  5_问题与建议.py  6_使用帮助.py
src/prompts/: prompt_template.txt
src/retrieval/: __init__.py  embedding.py
src/schemas/: __init__.py  assistant.py  base.py  chat.py  document.py  manage.py  message.py  store.py
src/services/: assistant.py  chat.py  (+1 more)
tests/: chat2llm_test.py  test_embedding.py
(+131 files in other folders)
