[project]
name = "chat2llms"
version = "0.0.6"
description = "与大模型交互的RAG问答系统"
readme = "README.md"
maintainers = [{ name = "Jacob Zheng", email = "1453366421@qq.com" }]
requires-python = ">=3.8"
dependencies = [
    "haystack-ai==2.4.0",
    "fastapi==0.112.2",
    "uvicorn==0.30.6",
    "python-dotenv==1.0.0",
    "sentence-transformers>=2.3.0",
    "qdrant-haystack==4.2.0",
    "ollama-haystack==0.0.7",
    "protobuf>=3.20,<5.0",
    "streamlit==1.38.0",
    "openinference-instrumentation-haystack==0.1.12",
    "opentelemetry-sdk==1.27.0",
    "opentelemetry-exporter-otlp==1.27.0",
    "arize-phoenix==4.32.0",
    "openpyxl==3.1.5"
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
# packages = ["backend","backend.llms","backend.embedding"]